# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  19 Apr 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-modules/files/1.0.0.19-makefile-kernel-dir.patch:
  Fix kernel location for modules 1.0.0.19.

  09 Apr 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-server-console/vmware-server-console-1.0.5.80187.ebui
  ld,
  app-emulation/vmware-workstation/vmware-workstation-6.5.0.84113.ebuild:
  Add fuse as dependency to vmware-workstation-6.5 (bug 217024).

  06 Apr 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080213.77928.ebuild,
  +app-emulation/open-vm-tools/open-vm-tools-0.0.20080319.82724.ebuild:
  Version bump open-vm-tools.

  06 Apr 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-workstation/files/6.5.0.84113/000_all_initd-location
  .patch,
  +app-emulation/vmware-workstation/files/6.5.0.84113/001_all_fix-permission
  s.patch,
  +app-emulation/vmware-workstation/files/6.5.0.84113/002_all_pagebreak-dete
  ction-fix.patch,
  +app-emulation/vmware-workstation/files/6.5.0.84113/004_all_do-not-build-m
  odules.patch,
  +app-emulation/vmware-workstation/files/6.5.0.84113/009_all_init.d-modules
  -warning.patch,
  +app-emulation/vmware-workstation/files/6.5.0.84113/011_all_legit-modules-
  only.patch,
  +app-emulation/vmware-modules/files/1.0.0.19-vsock-kernel-makefile.patch,
  +app-emulation/vmware-workstation/files/6.5.0.84113/007_all_use-modprobe-o
  ver-insmod.patch, eclass/vmware.eclass:
  Push in testing version of vmware-workstation-6.5.

  06 Apr 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/files/open-vm.initd:
  Sync open-vm-tools with tree.

  04 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-workstation/vmware-workstation-5.5.6.80404.ebuild:
  We remove libgcc_s.so.1, since it causes us all kinds of fun little problems.

  04 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>