@@ -4,7 +4,5 @@ AUX open-vm.confd 88 RMD160 5e398024e72a871f258d73e09f02e37a815443b0 SHA1 56133c
 AUX open-vm.initd 1763 RMD160 1ebcccb87118fb0efee566540b3e150906e4124b SHA1 311536e0208990d5c111dc10e0bbc8a974b2653d SHA256 5e4581f6cddb9fdf844caa90d7696b9e29dd07d9a513c4eac7e7de236fa1ed56
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
-DIST open-vm-tools-2008.01.23-74039.tar.gz 2332290 RMD160 b8a78e28abb63f50b5b9f49ad5ebaa727eee4619 SHA1 9d3fb1c2b71533a6d6ee67ee8bbf21edb26e9d59 SHA256 78754c0ab0cb39aad96d80bd1ade4ac2174c4067625d603e2a6afcce6359cace
-DIST open-vm-tools-2008.03.19-82724.tar.gz 2413184 RMD160 4f13548f2c6581266612a084746afa1ae7b9cf11 SHA1 dbad075c21695502c970bdb54fe82feeec8bffc1 SHA256 ee725d5908a78dc2f2ab4dd5759281b56d5b500105315fce08e64c5d5ddb9b3c
-EBUILD open-vm-tools-0.0.20080123.74039.ebuild 3533 RMD160 c9c481d318e7060d452ddbd8d18270a4894d8fd1 SHA1 63040aea42e9f44f487e905081c30c30d5dc42f6 SHA256 fbde5bcb91f0675a50aa0ef21d01244ee81c01f4e40a89039d22138e8a4e5da2
-EBUILD open-vm-tools-0.0.20080319.82724.ebuild 3552 RMD160 6d4a94cc5dee30d8e1ee0f67f2bdeaf6927d9c45 SHA1 dd713d756440516332db10b36e8c9bed70540747 SHA256 8983ad632d84cd9a88ddc8a5c11231d04e5457f8c46b109b9801b163921f6d70
+DIST open-vm-tools-2008.04.14-87182.tar.gz 2430703 RMD160 2003b86f881b8a9b51c61e833b0b7d4aca70e083 SHA1 0394f73975a34699b92ce90822803fdb365abc6f SHA256 34c19a50650e70fbaa3c1d01803cc96fd86dde4d5f1349bf444026a4b1016b07
+EBUILD open-vm-tools-0.0.20080414.87182.ebuild 3552 RMD160 6d4a94cc5dee30d8e1ee0f67f2bdeaf6927d9c45 SHA1 dd713d756440516332db10b36e8c9bed70540747 SHA256 8983ad632d84cd9a88ddc8a5c11231d04e5457f8c46b109b9801b163921f6d70
